# autogen-contextplus

./: README.md  pyproject.toml
.github/workflows/: pytest_and_codecov.yaml
autogen_contextplus/base/: __init__.py  _base_modifier.py  _base_modifier_agent.py
autogen_contextplus/conditions/: __init__.py  _conditions.py
autogen_contextplus/core/: _core.py
autogen_contextplus/examples/: simple_example.py
autogen_contextplus/modifier/: __init__.py  _modifier.py
examples/: simple_example.py
examples/extension/: example_extension_cutoff.py  example_extension_summary.py
tests/: test_condition.py
