[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autogen-contextplus"
version = "v0.0.1"
description = "Autogen ContextPlus, User defined AutoGen model_context"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "SongChiYoung", email = "stchuck2008@gmail.com" }
]
keywords = ["autogen", "llm", "chat-completion"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "autogen-core>=0.5.1",
]

[project.urls]
Homepage = "https://github.com/SongChiYoung/autogen-contextplus"
Repository = "https://github.com/SongChiYoung/autogen-contextplus"
Issues = "https://github.com/SongChiYoung/autogen-contextplus/issues"
